--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 18px;
 }
+
 .container {
   width: 1180px;
   height: 500px;
@@ -30,6 +32,12 @@
   justify-content: center;
   align-items: center;
 }
+.flex-column-centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 .main-section {
   height: 600px;
@@ -37,34 +45,51 @@
 .main-end {
   height: 1000px;
 }
+/*******************header*****************************/
+header {
+  background-image: url(../img/jumbo.png);
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+ul {
+  list-style: none;
+}
+
 .head-top {
   min-height: 80px;
-  background-color: rgb(173, 216, 230);
 }
 .head-nav {
   height: 50px;
-  background-color: rgb(218, 165, 32);
+
   width: 1200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .head-logo,
-.head-link,
-.head-login {
-  border: 2px dashed black;
+.head-link {
   height: 50px;
-  flex-grow: 1;
 }
 .head-link {
   width: 50%;
+  justify-content: space-between;
+}
+.head-login {
+  border-radius: 30px;
+  padding: 10px;
+  border: none;
+  font-size: 15px;
 }
 .head-main {
   height: 500px;
-  background-color: rgb(0, 0, 139);
 }
 .head-subject {
   width: 900px;
   height: 400px;
   background-color: rgb(238, 130, 238);
   border: 2px dashed black;
+  justify-content: space-around;
 }
 .photo {
   background-color: var(--space-m);
@@ -111,7 +136,6 @@ footer {
 }
 .info {
   background-color: var(--info-bg);
-
   width: calc(100% / 4);
   border: 2px dashed white;
 }
