--- a/style/style.css
+++ b/style/style.css
@@ -100,7 +100,7 @@ h1 {
   text-align: center;
 }
 .head-subject p {
-  font-size: 20px;
+  font-size: 22px;
 }
 .button-top {
   padding: 20px;
@@ -118,16 +118,27 @@ h1 {
 }
 /********************** MAIN SECTION********************************/
 .photo {
-  background-color: var(--space-m);
   width: 60%;
   height: 100%;
-  border: 2px dashed black;
+}
+.photo img {
+  width: 100%;
+  height: 100%;
 }
 .text {
-  background-color: var(--space-s);
   width: 40%;
   height: 100%;
-  border: 2px dashed black;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+h2 {
+  font-size: 55px;
+}
+.text p {
+  font-size: 20px;
+  padding: 30px 0;
 }
 .bgg {
   background-color: var(--grey-back);
