--- a/style/style.css
+++ b/style/style.css
@@ -170,9 +170,9 @@ h3 {
   background-repeat: no-repeat;
   padding: 37px 60px 0px 60px;
 }
-/****************************footer*********************************/
+/****************************FOOTER TOP*********************************/
 footer {
-  height: 650px;
+  /*height: 650px;*/
   background-color: rgb(35, 39, 42);
 }
 footer h2 {
@@ -198,7 +198,7 @@ a {
 }
 .footer-top {
   height: 550px;
-  border-bottom: 1px solid white;
+
   display: flex;
   padding-top: 15px;
   justify-content: center;
@@ -223,31 +223,35 @@ ul :first-child {
 .info {
   width: calc(100% / 4);
 }
+/*****************FOOTER END**************************/
 .footer-end {
-  height: 100px;
+  height: 200px;
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: flex-start;
 }
+
 .footer-container-end {
-  height: 70px;
+  height: 130px;
   width: 1180px;
-  background-color: rgb(127, 255, 212);
+  border-top: 1px solid rgb(74, 88, 130);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-/*.button*/
 
+.button-end,
 .logo {
-  background-color: rgb(255, 182, 193);
-  border: 2px dashed black;
   height: 40px;
 }
 .logo {
   width: 70px;
 }
-/*.button {
+.button-end {
   width: 100px;
-}*/
+  border-radius: 30px;
+  background-color: rgb(142, 161, 225);
+  color: white;
+  border: none;
+}
