--- a/style/style.css
+++ b/style/style.css
@@ -35,10 +35,19 @@
 }
 
 .main-section {
-  height: 600px;
+  height: 800px;
 }
 .main-end {
   height: 1300px;
+}
+.wave {
+  background-image: url(../img/wave.svg);
+  width: 100%;
+  height: 80px;
+  opacity: 0.034;
+}
+.rotate {
+  rotate: 0.5turn;
 }
 /*******************HEADER*****************************/
 header {
